# django-challenge

./: .gitignore  Dockerfile  docker-compose.yml  heroku.yml  pyproject.toml  readme.md
djangoChallenge/core/: models.py  serializers.py  tasks.py  utils.py  views.py
djangoChallenge/core/migrations/: 0001_initial.py
djangoChallenge/djangoChallenge/: asgi.py  urls.py  wsgi.py
djangoChallenge/djangoChallenge/settings/: base.py
docker/: Dockerfile  local.env  start.sh
