[tool.poetry]
name = "poetry_dc"
version = "0.1.0"
description = ""
authors = ["HUGO DEL SOLAR <hudrec11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
beautifulsoup4 = "^4.12.2"
requests = "^2.29.0"

[tool.poetry.dev-dependencies]
django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
